--- a/JesseNative/app/CMakeLists.txt
+++ b/JesseNative/app/CMakeLists.txt
@@ -42,3 +42,12 @@ target_link_libraries( # Specifies the target library.
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
+
+add_library( # Sets the name of the library.
+             duktape
+
+             # Sets the library as a shared library.
+             SHARED
+
+             # Provides a relative path to your source file(s).
+             src/main/cpp/duktape/native-lib.cpp )
